--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "dev": "ts-node-dev src/app.ts"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
