--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "dev": "ts-node-dev src/app.ts"
   },
   "dependencies": {
+    "@prisma/client": "^3.3.0",
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "prisma": "^3.3.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   }
