--- a/package.json
+++ b/package.json
@@ -6,20 +6,24 @@
   "author": "Daniel Nunes <danielzcomputacao@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --exit-child src/app.ts"
+    "dev": "ts-node-dev --exit-child src/server.ts"
   },
   "dependencies": {
     "@prisma/client": "^3.3.0",
     "axios": "^0.23.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "prisma": "^3.3.0"
+    "prisma": "^3.3.0",
+    "socket.io": "^4.3.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/socket.io": "^3.0.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   }
